Optimized imports, slight tweaks on formatting / etc.